--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">My Application</string>
     <string name="button1">+</string>
     <string name="button2">-</string>
-    <string name="button1Text">Number</string>
-    <string name="button2Text">Number</string>
+    <string name="button1Text">Номер</string>
+    <string name="button2Text">Номер</string>
 </resources>
